# markdown-server

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
markdown_server/: __init__.py  cli.py  findend.py  frontmatterdata.py  rubyannot.py  server.py  subscript.py  superscript.py  texmathml.py
markdown_server/static/: style.css
markdown_server/templates/: base.html  main.html
